@@ -2,7 +2,7 @@
 import os
 import sys
 from lintian_brush.control import (
-    ensure_minimum_version,
+    ensure_minimum_debhelper_version,
     update_control,
     )
 from lintian_brush.rules import (
@@ -14,10 +14,8 @@ minimum_version = "9.20160114"
 
 
 def bump_debhelper(control):
-    control["Build-Depends"] = ensure_minimum_version(
-            control["Build-Depends"],
-            "debhelper",
-            minimum_version)
+    control["Build-Depends"] = ensure_minimum_debhelper_version(
+        control["Build-Depends"], minimum_version)
 
 
 dbg_packages = set()
